# CMakeLibTemplate

./: CMakeLists.txt
Test/: CMakeLists.txt  main.cpp
